--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,9 +1,9 @@
 \chapter{In Conclusion}
 \label{chap:conclusion}
 
-In this chapter, we first discuss some the consequences of using G-ACGs
-for writing grammars. We then summarize the contributions that we have
-put forward and suggest problems we believe to be interesting.
+In this final chapter, we first discuss some the consequences of using
+G-ACGs for writing grammars. We then summarize the contributions that we
+have put forward and suggest problems we believe to be interesting.
 
 \section{On the Practical Consequences of Graphical ACGs}
 \label{sec:practical}
