Typo in abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
-We present work whose ultimate goal is the creation of wide-coverage
-abstract categorial grammars (ACGs) that could be used to automatically
+We present work whose ultimate goal is the creation of a wide-coverage
+abstract categorial grammar (ACG) that could be used to automatically
 build discourse-level representations. In our work, we advance towards
 that goal by laying down the foundations necessary for building
 wide-coverage ACGs.
