Typography changes near end of GACGs

--- a/gacg.tex
+++ b/gacg.tex
@@ -902,15 +902,17 @@ partially here.
 
 \begin{description}
   \item[Extrinsic languages can be defined similarly to pangraphical
-    languages] \hfill \\
+    languages] \hfill
 
     In the definition of $\mathcal{P}_{\mathcal{G}}(u)$, we replace the
     labeling of nodes with terms by a labeling of all the paths leading
     to $u$.
 
+  \vspace{0.5cm}
+
   \item[The three languages are increasingly constraining:
     $\mathcal{P}_{\mathcal{G}}(u) \subseteq \mathcal{E}_{\mathcal{G}}(u)
-    \subseteq \mathcal{I}_{\mathcal{G}}(u)$] \hfill \\
+    \subseteq \mathcal{I}_{\mathcal{G}}(u)$] \hfill
 
     Given a labeling of nodes with terms such that it satisfies the
     conditions in the definition of a pangraphical language, we can show
@@ -928,8 +930,10 @@ partially here.
     extrinsic languages are also constrained by its ancestors and
     pangraphical languages are constrained by the entire graph.
 
+  \vspace{0.5cm}
+
   \item[On arborescences, $\mathcal{P}_{\mathcal{G}}(u) =
-    \mathcal{E}_{\mathcal{G}}(u)$.] \hfill \\
+    \mathcal{E}_{\mathcal{G}}(u)$.] \hfill
 
     On an arborescence, being a member of an extrinsic language means
     there exists an antecedent in the abstract-most language of the
@@ -944,8 +948,10 @@ partially here.
     behaviors on arborescences are consistent with each other and with
     that of ACG object languages.
 
+  \vspace{0.5cm}
+
   \item[The set of extrinsic languages is included in the set of
-    pangraphical languages.] \hfill \\
+    pangraphical languages.] \hfill
 
     Let us have some node $u$ in a graphical ACG $\mathcal{G}$. We build
     a graphical ACG $\mathcal{G}'$ where every node corresponds to a
@@ -954,8 +960,10 @@ partially here.
     other. We then have $\mathcal{P}_{\mathcal{G'}}([u]) =
     \mathcal{E}_{\mathcal{G}}(u)$.
 
+  \vspace{0.5cm}
+
   \item[Is the set of pangraphical languages included in the set of
-    extrinsic languages?] \hfill \\
+    extrinsic languages?] \hfill
 
     That is an interesting question indeed, one whose resolution is left
     as a possible avenue for future work.
