--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,7 @@
 \usepackage{cancel}
 \usepackage[nottoc,numbib]{tocbibind}
 \usepackage{pdfpages}
+\usepackage{enumitem}
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
@@ -23,9 +24,10 @@
 
 \begin{document}
 
+\pagenumbering{gobble}
 \includepdf[pages={1}]{front-page.pdf}
 \newpage
-~~ \pagenumbering{gobble}
+~                               %
 \newpage
 
 \input{abstract}
