Wrote the resume in both languages

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
 
+\usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{xcolor}
@@ -54,5 +55,7 @@
 
 \bibliographystyle{plain}
 \bibliography{biblio}
+
+\input{resume}
 
 \end{document}
