Resume after review

--- a/resume.tex
+++ b/resume.tex
@@ -7,22 +7,22 @@
 
 Le but final de notre travail est la création d'une grammaire
 catégorielle abstraite (ACG) à large échelle qu'on pourra utiliser pour
-construire les représentations au niveau de discours d'une manière
+construire les représentations au niveau du discours de manière
 automatique.
 
-On commence par examiner les ressources linguistiques qui existent déjà,
-en particulier la grammaire d'interaction Frigram et son lexique Frilex,
-et on examine leur utilité pour la construction d'une ACG à large
-échelle. Ensuite, on présente une implémentation des mécanismes ACG qui
-nous permet d'expérimenter avec des grammaires lexicalisées par
-Frilex. Enfin, on considère les problèmes posés par le traitement des
-plusieurs contraintes linguistiques dans une seule ACG et on propose une
-généralisation du formalisme: les grammaires catégorielles abstraites
-graphiques.
+Nous commençons par examiner les ressources linguistiques qui existent
+déjà, en particulier la grammaire d'interaction Frigram et son lexique
+Frilex. Nous examinons ensuite leur utilité pour la construction d'une
+ACG à large échelle. Puis, nous présentons une implémentation des
+mécanismes ACG qui nous permet d'expérimenter des grammaires
+lexicalisées à partir de Frilex. Enfin, nous considérons les problèmes
+posés par le traitement de plusieurs contraintes linguistiques dans une
+unique ACG et nous proposons une généralisation du formalisme : les
+grammaires catégorielles abstraites graphiques.
 
 \item[Mots-clés]
 
-Grammaires catégorielles abstraites (ACG), Génie des grammaires,
+Grammaires catégorielles abstraites (ACG), Développement de grammaires,
 Grammaires d'interaction, Metagrammaires, Programmation relationnelle,
 Formalismes grammaticaux, Grammaires formelles, Linguistique
 computationnelle, Lambda-calcul, Théorie des types
